fixed misaligned text on image captions, switched map image and stsp building image positions

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -212,39 +212,74 @@ section.member-section h2{
   color:#595959;
 }
 
-section.member-section #member-imgone{
+// section.member-section #member-imgone{
+//   position: absolute;
+//   top:0;
+//   margin:60% 0 0 55%;
+//   width:40%;
+// }
+
+// section.member-section #member-captionone{
+//   position:absolute;
+//   top:0;
+//   color:#595959;
+//   background:none;
+//   border:none;
+//   font-weight: 600;
+//   margin: 85% 0 0 55.5%;
+//   font-size: 1.1vw;
+// }
+
+// section.member-section #member-imgtwo{
+//   position: absolute;
+//   top:0;
+//   margin:90% 0 0 55%;
+//   width:40%;
+// }
+
+// section.member-section #member-captiontwo{
+//   position:absolute;
+//   top:0;
+//   color:#595959;
+//   background:none;
+//   border:none;
+//   font-weight: 600;
+//   margin: 126% 0 0 58%;
+//   font-size: 1.1vw;
+// }
+section.member-section section#map-section{
   position: absolute;
   top:0;
-  margin:60% 0 0 55%;
   width:40%;
+  margin: 65% 0 0 55%;
+  text-align: center;
 }
 
-section.member-section #member-captionone{
-  position:absolute;
-  top:0;
+section.member-section section#map-section img#member-imgone{
+  width:100%;
+}
+
+section.member-section section#map-section p.image-caption{
   color:#595959;
-  background:none;
-  border:none;
   font-weight: 600;
-  margin: 85% 0 0 55.5%;
   font-size: 1.1vw;
 }
 
-section.member-section #member-imgtwo{
+section.member-section section#stspbuilding-section{
   position: absolute;
   top:0;
-  margin:90% 0 0 55%;
   width:40%;
+  margin: 105% 0 0 54.5%;
+  text-align: center;
 }
 
-section.member-section #member-captiontwo{
-  position:absolute;
-  top:0;
+section.member-section section#stspbuilding-section img#member-imgtwo{
+  width:100%;
+}
+
+section.member-section section#stspbuilding-section p.image-caption{
   color:#595959;
-  background:none;
-  border:none;
   font-weight: 600;
-  margin: 126% 0 0 58%;
   font-size: 1.1vw;
 }
 
@@ -335,33 +370,34 @@ section.nonmember-section #disclaimer{
     font-size: 6vw;
     padding-left: 0;
   }
-  
-  section.member-section #member-imgone{
+
+  section.member-section section#map-section{
     position: relative;
-    width:100%;
-    margin:0;
+    width: 100%;
+    text-align: center;
+    margin: 3% auto;
   }
 
-  section.member-section #member-captionone{
-    position:initial;
-    margin:0;
-    margin-bottom: 10%;
-    background:none;
-    border:none;
+  section.member-section section#map-section img#member-imgone{
+    width:75%;
+  }
+
+  section.member-section section#map-section p.image-caption{
     font-size: 2.6vw;
   }
-  
-  section.member-section #member-imgtwo{
+
+  section.member-section section#stspbuilding-section{
     position: relative;
-    width:75%;
-    margin:0;
+    width: 100%;
+    text-align: center;
+    margin: 3% auto;
   }
 
-  section.member-section #member-captiontwo{
-    position:initial;
-    margin:0;
-    background:none;
-    border:none;
+  section.member-section section#map-section img#member-imgtwo{
+    width:80%;
+  }
+
+  section.member-section section#stspbuilding-section p.image-caption{
     font-size: 2.6vw;
   }
   
